      health, damage, and bullet speeds transfer over between each part and reset when a stage is done. What about waves?
      Waves will still be implemented on harder stages so parts can still have waves.
    * Player now starts with full health. You lose if you run out of health. If you run out of lives, you reset the stage
      back to part 1. Lives do not carry over between stages like in most games.
    * Renamed some files like LevelPackMaker to Game, ScriptMaker to GameMaker, and LevelpackUnpacker to GamePackUnpacker
      because it just makes more sense. Also outdated folder contains... well outdated code for referencing my hard
      work ;)
    * Constants class saves screen size and applies it to classes that need it
------------------------------------------------------------------------------------------------------------------------
3.1 * Player can now save and load their progress. It saves their stats, stage and part, as well as settings.
    * Player gets passed between parts instead of passing the player values. Player gets reset to defaults after a stage.
    * Moved HUD labels around and added add money, part and time info.
    * Created a game config json file that saves the users screen preference. Changing the screen at settings will update
     it.
    * Moved main menu selections to add a player info panel. Changed some colors yay finally. Updated attributes file.
-----------------------------------------------------------------------------------------------------------------------
3.2 * Save/Load menus and player panel working. It's beautiful uwu. MOVING ON!
    * Added a launch menu for first time users to pick or create a profile. It will save into the config json file and
      next time they load the game it will automatically load that profile. If the game is not working check the config
      file to see if the player name exists as save if not just make it empty "". DON'T COMMIT GAME CONFIG FILE TO REPO.
    * XP system working.