@@ -32,7 +32,7 @@
             ]
          }
       ],
-      "xp": 5
+      "xp": 10
    },
    {
       "waves": [
@@ -102,6 +102,6 @@
             ]
          }
       ],
-      "xp": 15
+      "xp": 10
    }
 ]
